--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <HTML>
 
 <HEAD>
+  <div id="banner">
+    <div id="wrapper" style="width:100%; overflow:hidden;">
+        <div id="container" style="width:100%; margin-right:auto;">
+                <A HREF="https://midnightsun183.github.io/WSB.github.io/"><img style="width: 100%;" src="images/Pro Logo2.jpg" alt="Wall Street Bets PRO!"/>
+        </div>
+    </div>
+</div>
 </HEAD>
 
 <META>
