--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </META>
 
 <BODY>
-  <div id="banner">
+  <div id="header">
     <div id="wrapper" style="width:100%; overflow:hidden;">
         <div id="container" style="width:100%; margin-right:auto;">
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
