--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <HEAD>
   <link rel="stylesheet" type="text/css" href="main.css">
-	<html lang="en-US">
+  <html lang="en-US">
 
 </HEAD>
 
@@ -13,7 +13,7 @@
   <div id="header">
     <div id="wrapper" style="width:100%; overflow:hidden;">
         <div id="container" style="width:100%; margin-right:auto;">
-		<c><H1> YoJobas</H1></c>
+		<center><H2> YoJobas</H2></center>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
     </div>
