--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 <BODY>
   <div id="header">
     <div id="wrapper" style="width:100%; overflow:hidden;">
-        <div id="container" style="width:100%; margin-right:auto;">
-		<center><H2> YoJobas</H2></center>
+        <div id="container" style="width:100%; margin-right:auto; text-align: center">
+		<H2> YoJobas</H2>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
     </div>
 </div>  
+
+<div class="topnav">
+  <a href="https://reddit.com/r/wallstreetbets">WSB on Reddit</a>
+  <a href="https://discord.com/invite/wallstreetbets">WSB Discord</a>
+  <a href="#">Merch</a>
+  <a href="#" style="float:right" alt="WSB Members">WallStreetBets Pro!</a>
+</div class="topnav">
   
 </BODY>
 
