--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div id="wrapper" style="width:100%; overflow:hidden;">
         <div id="container" style="width:100%; margin-right:auto; text-align: center">
 		<H2> YoJobas</H2>
+		<H3> Automatically Apply to Jobs!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
     </div>
 </div>  
 
 <div class="topnav">
-  <a href="https://reddit.com/r/wallstreetbets">WSB on Reddit</a>
-  <a href="https://discord.com/invite/wallstreetbets">WSB Discord</a>
-  <a href="#">Merch</a>
-  <a href="#" style="float:right" alt="WSB Members">WallStreetBets Pro!</a>
+  <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
+  <a href="#">Resume Tips & Tricks</a>
+  <a href="#">YoJobas Pro!</a>
 </div class="topnav">
   
 </BODY>
