--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
   <a href="#">Resume Tips & Tricks</a>
   <a href="#">YoJobas Pro!</a>
 </div class="topnav">
-  
+
+<div class = "card">
+	<H3>
+		Information
+	</H3>
+
+</div class = "card">	    
+
+	    
 </BODY>
 
 <FOOTER>
