--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <div class = "card">
 	<H3>
 		Information
+		<img src = "https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg">
 	</H3>
 
 </div class = "card">	    
