--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
 		<img src = "https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg">
 	</H3>
 
-</div class = "card">	    
-
+</div class = "card">	
+	  <table class="browserref notranslate">
+  <tbody><tr>
+    <th style="width:20%;font-size:16px;text-align:left;">Attribute</th>
+    <th style="width:16%;" class="bsChrome" title="Chrome"></th>
+    <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"></th>
+    <th style="width:16%;" class="bsFirefox" title="Firefox"></th>
+    <th style="width:16%;" class="bsSafari" title="Safari"></th>
+    <th style="width:16%;" class="bsOpera" title="Opera"></th>                
+  </tr>
+  <tr>
+<td style="text-align:left;">width</td>
+    <td>Yes</td>
+    <td>Yes</td>
+    <td>Yes</td>
+    <td>Yes</td>
+    <td>Yes</td>
+  </tr>
+</tbody></table>
 	    
 </BODY>
 
