--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	</H3>
 
 </div class = "card">	
-	  <table class="browserref notranslate">
+	    
+<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
+<table class="browserref notranslate">
   <tbody><tr>
     <th style="width:20%;font-size:16px;text-align:left;">Attribute</th>
     <th style="width:16%;" class="bsChrome" title="Chrome"></th>
