--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
 <table class="browserref notranslate">
   <tbody><tr>
-    <th style="width:20%;font-size:16px;text-align:left;">Attribute</th>
+    <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
     <th style="width:16%;" class="bsChrome" title="Chrome"></th>
     <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"></th>
     <th style="width:16%;" class="bsFirefox" title="Firefox"></th>
@@ -45,12 +45,12 @@
     <th style="width:16%;" class="bsOpera" title="Opera"></th>                
   </tr>
   <tr>
-<td style="text-align:left;">width</td>
+<td style="text-align:left;">Supported</td>
     <td>Yes</td>
-    <td>Yes</td>
-    <td>Yes</td>
-    <td>Yes</td>
-    <td>Yes</td>
+    <td>Soon</td>
+    <td>Soon</td>
+    <td>Soon</td>
+    <td>No</td>
   </tr>
 </tbody></table>
 	    
