--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
     <th style="width:16%;" class="bsChrome" title="Chrome"></th>
     <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"></th>
-    <th style="width:16%;" class="bsFirefox" title="Firefox" img src = "images/Firefox_logo_2019.svg"></th>
+    <th style="width:16%;" class="bsFirefox" title="Firefox" img src = "images/Firefox Icon.svg"></th>
     <th style="width:16%;" class="bsSafari" title="Safari"></th>
     <th style="width:16%;" class="bsOpera" title="Opera"></th>                
   </tr>
