--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class = "card">
 	<H3>
 		Information
-		<img src = "https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg">
+		<img src = "images/Firefox Icon.svg">
 	</H3>
 
 </div class = "card">	
@@ -40,7 +40,7 @@
     <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
     <th style="width:16%;" class="bsChrome" title="Chrome"></th>
     <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"></th>
-    <th style="width:16%;" class="bsFirefox" title="Firefox" img src = "images/Firefox Icon.svg"></th>
+    <th style="width:16%;" class="bsFirefox" title="Firefox" img src = images/Firefox Icon.svg></th>
     <th style="width:16%;" class="bsSafari" title="Safari"></th>
     <th style="width:16%;" class="bsOpera" title="Opera"></th>                
   </tr>
