--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   <tbody><tr>
     <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
     <th style="width:16%;" class="bsChrome" title="Chrome"></th>
-    <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"></th>
+    <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"><img src = "images/Edge Icon.svg"></img></th>
 	  <th style="width:16%;"  title="Firefox"> <img src = "images/Firefox Icon.svg"></img></th>
-    <th style="width:16%;" class="bsSafari" title="Safari"></th>
+    <th style="width:16%;" class="bsSafari" title="Safari"> <img src = "images/Safari Icon.svg"></img></th>
     <th style="width:16%;" class="bsOpera" title="Opera"></th>                
   </tr>
   <tr>
