--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"><img src = "images/Edge Icon.svg"></img></th>
 	  <th style="width:16%;"  title="Firefox"> <img src = "images/Firefox Icon.svg"></img></th>
     <th style="width:16%;" class="bsSafari" title="Safari"> <img src = "images/Safari Icon.svg"></img></th>
-    <th style="width:16%;" class="bsOpera" title="Opera"> <img src = "images/Opera Icon.svg"></img></th>                
+    <th style="width:16%;" class="bsOpera" title="Opera"> <img src = "images/Opera Icon.png"></img></th>                
   </tr>
   <tr>
 <td style="text-align:left;">Supported</td>
@@ -50,7 +50,7 @@
     <td>Soon</td>
     <td>Soon</td>
     <td>Soon</td>
-    <td>No</td>
+    <td>Yes*</td>
   </tr>
 </tbody></table>
 	    
