--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <td>Yes*</td>
   </tr>
 </tbody></table>
-	    
+
+<br>
+<p> *See: <a>https://www.howtogeek.com/210925/how-to-install-chrome-extensions-in-opera-and-opera-extensions-in-chrome/</a> for more information</p>
 </BODY>
 
 <FOOTER>
