--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 </tbody></table>
 
 <br>
-<p> *See: <a>https://www.howtogeek.com/210925/how-to-install-chrome-extensions-in-opera-and-opera-extensions-in-chrome/</a> for more information</p>
+<br>
+<p> *<a href= "https://bit.ly/3eIpIF7">Click here</a> for more information
+</p>
+
 </BODY>
 
 <FOOTER>
