--- a/index.html
+++ b/index.html
@@ -50,13 +50,20 @@
     <td>Soon</td>
     <td>Soon</td>
     <td>Soon</td>
-    <td>Yes*</td>
+    <td><a href= "https://bit.ly/3eIpIF7">Yes*</a></td>
   </tr>
 </tbody></table>
 
 <br>
 <br>
-<p> *<a href= "https://bit.ly/3eIpIF7">Click here</a> for more information
+
+<p> 
+	<small>
+		*<a href= "https://bit.ly/3eIpIF7">
+			Click here
+		</a>
+		for more information
+	</small>
 </p>
 
 </BODY>
