--- a/index.html
+++ b/index.html
@@ -33,26 +33,29 @@
 	</H3>
 
 </div class = "card">	
-	    
-<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
-<table class="browserref notranslate">
-  <tbody><tr>
-    <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
-    <th style="width:16%;" class="bsChrome" title="Chrome"></th>
-    <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"><img src = "images/Edge Icon.svg"></img></th>
+
+
+<div class = "card">
+	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
+	<table class="browserref notranslate">
+  	<tbody><tr>
+  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
+   	  <th style="width:16%;" class="bsChrome" title="Chrome"></th>
+  	  <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"><img src = "images/Edge Icon.svg"></img></th>
 	  <th style="width:16%;"  title="Firefox"> <img src = "images/Firefox Icon.svg"></img></th>
-    <th style="width:16%;" class="bsSafari" title="Safari"> <img src = "images/Safari Icon.svg"></img></th>
-    <th style="width:16%;" class="bsOpera" title="Opera"> <img src = "images/Opera Icon.svg"></img></th>                
-  </tr>
-  <tr>
-<td style="text-align:left;">Supported</td>
-    <td>Yes</td>
-    <td>Soon</td>
-    <td>Soon</td>
-    <td>Soon</td>
-    <td><a href= "https://bit.ly/3eIpIF7">Yes*</a></td>
-  </tr>
-</tbody></table>
+    	  <th style="width:16%;" class="bsSafari" title="Safari"> <img src = "images/Safari Icon.svg"></img></th>
+          <th style="width:16%;" class="bsOpera" title="Opera"> <img src = "images/Opera Icon.svg"></img></th>                
+  	</tr>
+  	<tr>
+	<td style="text-align:left;">Supported</td>
+    		<td>Yes</td>
+    		<td>Soon</td>
+    		<td>Soon</td>
+  		<td>Soon</td>
+  		<td><a href= "https://bit.ly/3eIpIF7">Yes*</a></td>
+ 	 </tr>
+	</tbody></table>
+</div class = "card">
 
 <br>
 <br>
