--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<table class="browserref notranslate">
   	<tbody><tr>
   	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
-   	  <th style="width:16%;" class="bsChrome" title="Chrome"></th>
+   	  <th style="width:16%;" class="bsChrome" title="Chrome"><img src = "images/Edge Icon.svg"></img></th>
   	  <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"><img src = "images/Edge Icon.svg"></img></th>
 	  <th style="width:16%;"  title="Firefox"> <img src = "images/Firefox Icon.svg"></img></th>
     	  <th style="width:16%;" class="bsSafari" title="Safari"> <img src = "images/Safari Icon.svg"></img></th>
@@ -52,22 +52,20 @@
     		<td>Soon</td>
     		<td>Soon</td>
   		<td>Soon</td>
-  		<td><a href= "https://bit.ly/3eIpIF7">Yes*</a></td>
+  		<td>Yes*</td>
  	 </tr>
 	</tbody></table>
 
 
 <br>
 <br>
-
-<p> 
 	<small>
 		*<a href= "https://bit.ly/3eIpIF7">
 			Click here
 		</a>
 		for more information
 	</small>
-</p>
+
 </div class = "card">
 </BODY>
 
