--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <a href="#">YoJobas Pro!</a>
 </div class="topnav">
 
+	<div class = "cardSpace></div>
+
 <div class = "card">
 	<H3>
 		Information
@@ -34,6 +36,7 @@
 
 </div class = "card">	
 
+    <div class = "cardSpace></div>
 
 <div class = "card">
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
