--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="#">YoJobas Pro!</a>
 </div class="topnav">
 
-	<div class = "cardSpace></div>
+	<div class = "cardSpace"></div>
 
 <div class = "card">
 	<H3>
@@ -36,7 +36,7 @@
 
 </div class = "card">	
 
-    <div class = "cardSpace></div>
+    <div class = "cardSpace"></div>
 
 <div class = "card">
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
