--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 </div class = "card">	
 
 <div class = "card">
+	<h2>Compatibility</h2>
+	<br>
+	<br>
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
 	<table class="browserref notranslate">
   	<tbody><tr>
