--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
           <th style="width:16%;" class="bsOpera" title="Opera"></th>                
   	</tr>
   	<tr>
-	<td style="text-align:center;">Supported</td>
-    		<td>Yes</td>
-    		<td>Soon</td>
-    		<td>Soon</td>
-  		<td>Soon</td>
-  		<td>Yes*</td>
+	  <td style="text-align:left;">Supported</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Soon</td>
+    	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Yes*</td>
  	 </tr>
 	</tbody></table>
 
