--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 	<H3>
 		Information
 	</H3>	
-	<p>
+	<p align="justify>
 	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. YoJobas is here to change that. 
+		<br>
+		<br>
 	Instead of wading through a sea of job descriptions and then repeatedly clicking on "apply now" buttons and them mashing a never-ending series of "next" and "confirm" buttons, YoJobas is designed to work with popular job forums such as LinkedIn and Monster.com, and Glassdoor to automatically apply to jobs.
+		<br>
 		<br>
 	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
 	</p>
