--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<H3>
 		Information
 	</H3>	
-	<p align="justify>
+	<p align="justify">
 	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. YoJobas is here to change that. 
 		<br>
 		<br>
