--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="wrapper" style="width:100%; overflow:hidden;">
         <div id="container" style="width:100%; margin-right:auto; text-align: center">
 		<H2> YoJobas</H2>
-		<H3> Automatically Apply to Jobs!<H3>
+		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
     </div>
