--- a/index.html
+++ b/index.html
@@ -43,7 +43,23 @@
 	
 
 </div class = "card">	
+	    
+<div class = "card">
+	<p align="center">
+	
+		YOU ARE IN GOOD HANDS
+		<br>
+		<br>
+		Trusted by over 100,000 worldwide to help easily find their next job.
+		<br>
+		<br>
+	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
+	</p>
+		<img src = "images/Product_Icon.svg">
+	
 
+</div class = "card">	
+	    
 <div class = "card">
 	<h2>Compatibility</h2>
 	<br>
