--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 		<br>
 		<br>
 		Trusted by over 100,000 worldwide to help easily find their next job.
-		<br>
-		<br>
-	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
+ 
 	</p>
-		<img src = "images/Product_Icon.svg">
-	
+
+	<div>
+		<img class = "marginauto" src = "images/Trust_Icon.svg" />
+	</div>
 
 </div class = "card">	
 	    
