--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</p>
 
 	<div>
-		<img class = "marginauto" src = "images/Trust_Icon.svg" />
+		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
 	</div>
 
 </div class = "card">	
