--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 	<table class="browserref notranslate">
   	<tbody><tr>
   	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
-   	  <th style="width:16%;" class="bsChrome" title="Chrome"></th>
-  	  <th style="width:16%;" class="bsEdge" title="Internet Explorer / Edge"></th>
-	  <th style="width:16%;" class="bsFirefox" title="Firefox"></th>
-    	  <th style="width:16%;" class="bsSafari" title="Safari"></th>
-          <th style="width:16%;" class="bsOpera" title="Opera"></th>                
+   	  <th style="width:16%;" height="20" class="bsChrome" title="Chrome"></th>
+  	  <th style="width:16%;" height="20" class="bsEdge" title="Internet Explorer / Edge"></th>
+	  <th style="width:16%;" height="20" class="bsFirefox" title="Firefox"></th>
+    	  <th style="width:16%;" height="20" class="bsSafari" title="Safari"></th>
+          <th style="width:16%;" height="20" class="bsOpera" title="Opera"></th>                
   	</tr>
   	<tr>
 	  <td style="text-align:left;">Supported</td>
