--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<br>
 	<br>
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
-	<table class="browserref notranslate">
+	<table class="browserref">
   	<tbody><tr>
   	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
    	  <th style="width:16%;" height="20" class="bsChrome" title="Chrome"></th>
