--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 	<div>
 		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
 	</div>
-
+	
+	<a href="/app/signup" class="button">
+		Try for free
+	</a>
+	
 </div class = "card">	
 	    
 <div class = "card">
