--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
 		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
 	</div>
 	
-	<a href="/app/signup" class="button">
-		Try for free
-	</a>
+	<div class="container">
+  		<div class="vertical-center">
+		<a href="/app/signup" class="button">
+			Try for free
+		</a>
+  		</div>
+	</div>
 	
 </div class = "card">	
 	    
