--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</div>
 	
 	<div class="container">
-  		<div class="vertical-center">
+  		<div class="center">
 		<a href="/app/signup" class="button">
 			Try for free
 		</a>
