--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
 </div class = "card">	
 	    
 <div class = "card">
+	<div class = "center">
+		<p align="justify">
+		Use our unique job application system to apply to easily find the next step in your career.
+		</p>
+	  <ul class="bulk-email_list">
+	  <li>
+	    Upload large files
+	  </li>
+	  <li>
+	    Sync with your CRM
+	  </li>
+	  <li>
+	    Custom download
+	  </li>
+	  <li>
+	    Remove duplicates
+	  </li>
+	  </ul> 
+		
+	</div class = "center">
+</div class = "card">
+	    
+<div class = "card">
 	<p align="center">
 	
 		YOU ARE IN GOOD HANDS
