--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
 
 
 <div class = "card">
+	<div class="container">
 	<div class = "center">
 		<p align="justify">
 		Use our unique job application system to apply to easily find the next step in your career.
 		</p>
 		
 	</div class = "center">
+	</div class="container">
 </div class = "card">
 
 	    
