--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
 		<p align="justify">
 		Use our unique job application system to apply to easily find the next step in your career.
 		</p>
-		
+		<ul>
+		<li>
+		  Upload large files
+		</li>
+		<li>
+		  Sync with your CRM
+		</li>
+		<li>
+		  Custom download
+		</li>
+		<li>
+		  Remove duplicates
+		</li>
+		</ul>
 	</div class = "center">
 	</div class="container">
 </div class = "card">
