--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@
 		<br>
 	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
 	</p>
-		<img src = "images/Product_Icon.svg">
+		<img src = "images/Product_Icon.svg"/>
 	
+	<div class="container">
+  	  <div class="center">
+	    <a href="/app/signup" class="button">
+	      Try for free
+	    </a>
+  	  </div>
+	</div>
 
 </div class = "card">	
 
