--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
 	<div class="container">
 	<div class = "center">
 		<p align="justify">
-		Use our unique job application system to apply to easily find the next step in your career.
+		Use our unique job application system to apply to easily find your next job and advance your career with the click of a button.
 		</p>
 		<ul>
 		<li>
-		  Upload large files
+		  Automatic application tracking system
 		</li>
 		<li>
-		  Sync with your CRM
+		  Easily apply to hundreds of positions
 		</li>
 		<li>
-		  Custom download
+		  Search by job title, location, and even salary
 		</li>
 		<li>
-		  Remove duplicates
+		  LinkedIn, Glassdoor, Indeed, Monster & more!
 		</li>
 		</ul>
 	</div class = "center">
