--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<br>
 	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
 	</p>
-		<img src = "images/Product_Icon.svg"/>
+		<img class ="productImage" src = "images/Product_Image_1.png"/>
 	
 	<div class="container">
   	  <div class="center">
