--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 	      Try for free
 	    </a>
   	  </div>
-	    
-	    <img class ="productImage" src = "images/Product_Image_1.png"/>
 	</div>
 
+	<div class = "conatiner">
+	  <img class ="productImage" src = "images/Product_Image_1.png"/>
+	</div>
+	    
 </div class = "card">	
 
 
