--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   	  </div>
 	</div>
 
-	<div class = "conatiner">
+	<div>
 	  <img class ="productImage" src = "images/Product_Image_1.png"/>
 	</div>
 	    
@@ -84,10 +84,7 @@
 <div class = "card">
 	<p align="center">
 	
-		YOU ARE IN GOOD HANDS
-		<br>
-		<br>
-		Trusted by over 100,000 worldwide to help easily find their next job.
+		Trusted by over 100,000 career seekers worldwide to help easily find their next job.
  
 	</p>
 
