--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
   	  </div>
 	</div>
 
+
 	<div>
-	  <img class ="productImage" src = "images/Product_Image_1.png"/>
+		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
+		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
+		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
+		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
 	</div>
 	    
 </div class = "card">	
