--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 
 	<div>
-		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
-		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
-		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
-		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
+		<img class = "marginauto" src = "Product_Image_1.png"  height="100" />
+		<img class = "marginauto" src = "Product_Image_1.png"  height="100" />
+		<img class = "marginauto" src = "Product_Image_1.png"  height="100" />
+		<img class = "marginauto" src = "Product_Image_1.png"  height="100" />
 	</div>
 	    
 </div class = "card">	
