--- a/index.html
+++ b/index.html
@@ -92,9 +92,35 @@
  
 	</p>
 
-	<div>
+<div>
 		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
 	</div>
+
+	<div id="container">
+   	<!-- <header> -->
+   	  <h1>Easily apply to top companies, worldwide</h1>
+   	  
+  	 <!-- </header> -->
+    
+   	 <!-- Each image is 350px by 233px -->
+    	<div class="photobanner">
+    	  <img class="first" src="image-1.jpg" alt="" />
+    	  <img src="image-2.jpg" alt="" />
+    	  <img src="image-3.jpg" alt="" />
+      	  <img src="image-4.jpg" alt="" />
+    	  <img src="image-5.jpg" alt="" />
+    	  <img src="image-6.jpg" alt="" />
+    	  <img src="image-1.jpg" alt="" />
+    	  <img src="image-2.jpg" alt="" />
+    	  <img src="image-3.jpg" alt="" />
+    	  <img src="image-4.jpg" alt="" />
+    	</div>
+</div>
+
+	
+	
+	
+	
 	
 	<div class="container">
   		<div class="center">
