--- a/index.html
+++ b/index.html
@@ -97,27 +97,19 @@
 	</div>
 
 	<div id="container">
-   	<!-- <header> -->
-   	  <h2 align = "center">Easily apply to top companies, worldwide</h2>
-   	  
-  	 <!-- </header> -->
-    
-   	 <!-- Each image is 350px by 233px -->
-    	<div class="photobanner">
-    	  <img class="first" src="image-1.jpg" alt="" />
-    	  <img src="images/companiesLogos/Capital_One_logo.svg" alt="" />
-    	  <img src="images/companiesLogos/Deloitte_logo.svg" alt="" />
-      	  <img src="images/companiesLogos/DuPont_logo.svg" alt="" />
-    	  <img src="images/companiesLogos/General_Electric_logo.svg" alt="" />
-    	  <img src="images/companiesLogos/Hulu_logo.svg" alt="" />
-    	  <img src="images/companiesLogos/Mitsubishi_motors_logo.svg" alt="" />
-    	  <!-- <img src="image-2.jpg" alt="" />
-    	  <img src="image-3.jpg" alt="" />
-    	  <img src="image-4.jpg" alt="" /> -->
-    	</div>
-</div>
 
-	
+
+ <div class="row">
+  <div class="column">
+    <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%">
+  </div>
+</div> 
 	
 	
 	
