--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="100" />
 	</div>
 
-	<div id="container">
+	<!-- <div id="container"> -->
 
 
  <div class="row">
@@ -121,7 +121,7 @@
 		</a>
   		</div>
 	</div>
-	</div>
+	<!-- </div> -->
 </div class = "card">	
 	    
 <div class = "card">
