--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<!-- <div id="container"> -->
 
 
- <div class="row">
+ <div class="row" align = "center">
   <div class="column">
     <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%">
   </div>
