--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 	<!-- <div id="container"> -->
 
-
- <div class="row" align = "center">
+<div class = "center">
+ <div class="row">
   <div class="column">
     <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%">
   </div>
@@ -109,8 +109,8 @@
   <div class="column">
     <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%">
   </div>
-</div> 
-	
+ </div> 
+</div>	
 	
 	
 	
