--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
   <div class="column">
     <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%">
   </div>
+  <div class="column">
+    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%">
+  </div>
  </div> 
 
 	
