--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
 
  <div class="row">
   <div class="column">
-    <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%">
+    <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" class="center">
   </div>
   <div class="column">
-    <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%">
+    <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" class="center">
   </div>
   <div class="column">
-    <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%">
+    <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%" class="center">
   </div>
   <div class="column">
-    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%">
+    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" class="center">
   </div>
  </div> 
 
