--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
     <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="100" />
   </div>
   <div class="column">
+    <img src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="100" />
+  </div>
+  <div class="column">
     <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="100" />
   </div>
   <div class="column">
