--- a/index.html
+++ b/index.html
@@ -115,6 +115,24 @@
     <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="100" />
   </div>
  </div> 
+	<br>
+ <div class="row">
+  <div class="column">
+    <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
+  </div>
+  <div class="column">
+    <img src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
+  </div>
+  <div class="column">
+    <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
+  </div>
+  <div class="column">
+    <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
+  </div>
+  <div class="column">
+    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="100" />
+  </div>
+ </div> 	
 
 	
 	
