--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 <div>
 		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="200" />
 	</div>
-
+	<p align="center">
+		Apply to thousands of jobs at top tier companies and local companies alike with the click of a button.
+	</p>
+	
 	<!-- <div id="container"> -->
 
  <div class="row">
@@ -112,25 +115,25 @@
     <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
   </div>
   <div class="column">
-    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="100" />
+    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="95" />
   </div>
  </div> 
 	<br>
  <div class="row">
   <div class="column">
-    <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
+    <img src="images/companiesLogos/HomeDepot_logo.svg" style="width:100%" height="145" />
   </div>
   <div class="column">
-    <img src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
+    <img src="images/companiesLogos/Hulu_logo.svg" style="width:100%" height="120" />
   </div>
   <div class="column">
-    <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
+    <img src="images/companiesLogos/UPS_logo.svg" style="width:100%" height="150" />
   </div>
   <div class="column">
-    <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
+    <img src="images/companiesLogos/Target_Corporation_logo.svg" style="width:100%" height="150" />
   </div>
   <div class="column">
-    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="100" />
+    <img src="images/companiesLogos/Whole_Foods_Market_logo.svg" style="width:100%" height="100" />
   </div>
  </div> 	
 
