--- a/index.html
+++ b/index.html
@@ -50,13 +50,24 @@
 	</div>
 
 
-	<div>
-		<img class = "marginauto" src = "images/Product_Image_1.png"  height="100" />
-		<img class = "marginauto" src = "images/Product_Image_1.png"  height="100" />
-		<img class = "marginauto" src = "images/Product_Image_1.png"  height="100" />
-		<img class = "marginauto" src = "images/Product_Image_1.png"  height="100" />
-	</div>
-	    
+ <div class="row">
+  <div class="column">
+    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
+  </div>
+  <div class="column">
+    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
+  </div>
+  <div class="column">
+    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
+  </div>
+  <div class="column">
+    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
+  </div>
+  <div class="column">
+    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
+  </div>
+ </div> 	
+	
 </div class = "card">	
 
 
