--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   <div class="column">
     <img src="images/Product_Image_1.png" style="width:100%" height="200" />
   </div>
-  </div>	 
- </div> 	
+ </div class="row">
+
 	
 </div class = "card">	
 
