--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <img src="images/Product_Image_1.png" style="width:100%" height="200" />
   </div>
  </div class="row">
-
+ </div> </div> </div>
 	
 </div class = "card">	
 
@@ -170,11 +170,11 @@
 	<table class="browserref">
   	<tbody><tr>
   	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
-   	  <th style="width:16%;" height="20" class="bsChrome" title="Chrome"></th>
-  	  <th style="width:16%;" height="20" class="bsEdge" title="Internet Explorer / Edge"></th>
-	  <th style="width:16%;" height="20" class="bsFirefox" title="Firefox"></th>
-    	  <th style="width:16%;" height="20" class="bsSafari" title="Safari"></th>
-          <th style="width:16%;" height="20" class="bsOpera" title="Opera"></th>                
+   	  <th style="width:16%;" height="25" class="bsChrome" title="Chrome"></th>
+  	  <th style="width:16%;" height="25" class="bsEdge" title="Internet Explorer / Edge"></th>
+	  <th style="width:16%;" height="25" class="bsFirefox" title="Firefox"></th>
+    	  <th style="width:16%;" height="25" class="bsSafari" title="Safari"></th>
+          <th style="width:16%;" height="25" class="bsOpera" title="Opera"></th>                
   	</tr>
   	<tr>
 	  <td style="text-align:left;">Supported</td>
