--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
     <img src="images/Product_Image_1.png" style="width:100%" height="200" />
   </div>
  </div class="row">
- </div> </div> </div>
-	
+ </div> 
 </div class = "card">	
 
 
