--- a/index.html
+++ b/index.html
@@ -50,24 +50,13 @@
 	</div>
 
 
- <div class="row">
-  <div class="column">
-    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
-  </div>
-  <div class="column">
-    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
-  </div>
-  <div class="column">
-    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
-  </div>
-  <div class="column">
-    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
-  </div>
-  <div class="column">
-    <img src="images/Product_Image_1.png" style="width:100%" height="200" />
-  </div>
- </div class="row">
- </div> 
+  <img src="images/Product_Image_1.png" class="column" height="200" />
+  <img src="images/Product_Image_1.png" class="column" height="200" />
+  <img src="images/Product_Image_1.png" class="column" height="200" />
+  <img src="images/Product_Image_1.png" class="column" height="200" />
+  <img src="images/Product_Image_1.png" class="column" height="200" />
+  
+	
 </div class = "card">	
 
 
