--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
 	    </a>
   	  </div>
 	</div>
-
-
+<div class = "center">
   <img src="images/Product_Image_1.png" class="column" height="200" />
   <img src="images/Product_Image_1.png" class="column" height="200" />
   <img src="images/Product_Image_1.png" class="column" height="200" />
   <img src="images/Product_Image_1.png" class="column" height="200" />
   <img src="images/Product_Image_1.png" class="column" height="200" />
-  
+</div class = "center">  
 	
 </div class = "card">	
 
