--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	    </a>
   	  </div>
 	</div>
+	    </div>
 <div class = "center">
   <img src="images/Product_Image_1.png" class="column" height="200" />
   <img src="images/Product_Image_1.png" class="column" height="200" />
@@ -55,7 +56,7 @@
   <img src="images/Product_Image_1.png" class="column" height="200" />
   <img src="images/Product_Image_1.png" class="column" height="200" />
 </div class = "center">  
-	
+	</div>
 </div class = "card">	
 
 
