--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
 	</div>
 	    </div>
 <div class = "center">
-  <img src="images/Product_Image_1.png" class="column" height="200" />
-  <img src="images/Product_Image_1.png" class="column" height="200" />
-  <img src="images/Product_Image_1.png" class="column" height="200" />
-  <img src="images/Product_Image_1.png" class="column" height="200" />
-  <img src="images/Product_Image_1.png" class="column" height="200" />
+  <img src="images/Product_Image_1.png"  height="200" />
+  <img src="images/Product_Image_1.png"  height="200" />
+
 </div class = "center">  
 	</div>
 </div class = "card">	
