--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   	  </div>
 	</div>
 	    </div>
+	    
+	    </div>
+	  
 <div class = "center">
   <img src="images/Product_Image_1.png"  height="200" />
   <img src="images/Product_Image_1.png"  height="200" />
