--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	    </div>
 	    
 	    </div>
+	    </div>
 	  
 <div class = "center">
   <img src="images/Product_Image_1.png"  height="200" />
