--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
 	</div>
 	    </div>
 	    
-	    </div>
-	    </div>
-	  
-<div class = "center">
-  <img src="images/Product_Image_1.png"  height="200" />
-  <img src="images/Product_Image_1.png"  height="200" />
+<div class = "container">
+  <div class = "center">
+    <img src="images/Product_Image_1.png"  height="200" />
+    <img src="images/Product_Image_1.png"  height="200" />
+  </div class = "center">  
+<div class = "container">
 
-</div class = "center">  
-	</div>
+</div>
 </div class = "card">	
 
 
