--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
   <div class = "center">
     <img src="images/Product_Image_1.png"  height="200" />
     <img src="images/Product_Image_1.png"  height="200" />
+    <img src="images/Product_Image_1.png"  height="200" />
+    <img src="images/Product_Image_1.png"  height="200" />  
+    <img src="images/Product_Image_1.png"  height="200" />
   </div class = "center">  
 </div>
 
