--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	  
 	  
 
-  <div class = "center">
+  <div class = "center" style="width:100%">
     <img src="images/Product_Image_1.png"  height="200" />
     <img src="images/Product_Image_1.png"  height="200" />
     <img src="images/Product_Image_1.png"  height="200" />
