--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <!-- this sort of works....
 <div class = "center" style="width:100%"> -->
-<div id="wrapper" style="width:100%; > <!-- overflow:hidden;" -->
+<div id="wrapper" style="width:100%;" > <!-- overflow:hidden;" -->
     <img src="images/Product_Image_1.png"  height="200" />
     <img src="images/Product_Image_1.png"  height="200" />
     <img src="images/Product_Image_1.png"  height="200" />
