--- a/index.html
+++ b/index.html
@@ -108,39 +108,40 @@
 	
 	<!-- <div id="container"> -->
 
- <div class="row">
-  <div class="column">
-    <img src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
+ 
+  <div class="containerFlex">
+  <div>
+    <img class = "item" src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
+  <div>
+    <img class = "item" src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
+  <div>
+    <img class = "item" src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
+  <div>
+    <img class = "item" src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="95" />
+  <div>
+    <img class = "item" src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="95" />
   </div>
  </div> 
 	<br>
- <div class="row">
-  <div class="column">
-    <img src="images/companiesLogos/HomeDepot_logo.svg" style="width:100%" height="145" />
+ <div>
+  <div>
+    <img class = "item" src="images/companiesLogos/HomeDepot_logo.svg" style="width:100%" height="145" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/Hulu_logo.svg" style="width:100%" height="120" />
+  <div>
+    <img class = "item" src="images/companiesLogos/Hulu_logo.svg" style="width:100%" height="120" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/UPS_logo.svg" style="width:100%" height="150" />
+  <div>
+    <img class = "item" src="images/companiesLogos/UPS_logo.svg" style="width:100%" height="150" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/Target_Corporation_logo.svg" style="width:100%" height="150" />
+  <div>
+    <img class = "item" src="images/companiesLogos/Target_Corporation_logo.svg" style="width:100%" height="150" />
   </div>
-  <div class="column">
-    <img src="images/companiesLogos/Whole_Foods_Market_logo.svg" style="width:100%" height="120" />
+  <div>
+    <img class = "item" src="images/companiesLogos/Whole_Foods_Market_logo.svg" style="width:100%" height="120" />
   </div>
  </div> 	
 
