--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@
 	  
 	  
 
-  <!-- this sort of works....
-<div class = "center" style="width:100%"> -->
-<div id="wrapper" style="width:100%;" > <!-- overflow:hidden;" -->
-    <img src="images/Product_Image_1.png"  height="200" />
-    <img src="images/Product_Image_1.png"  height="200" />
-    <img src="images/Product_Image_1.png"  height="200" />
-    <img src="images/Product_Image_1.png"  height="200" />  
-    <img src="images/Product_Image_1.png"  height="200" />
+<div class="flex-container">
+    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
+    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
+    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
+    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />  
+    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
   </div>  
 </div>
 
