--- a/index.html
+++ b/index.html
@@ -107,23 +107,18 @@
 	<!-- <div id="container"> -->
 
  
-  <div class="containerFlex">
-  <div>
-    <img class = "item" src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
-  </div>
-  <div>
-    <img class = "item" src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
-  </div>
-  <div>
-    <img class = "item" src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
-  </div>
-  <div>
-    <img class = "item" src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
-  </div>
-  <div>
-    <img class = "item" src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="95" />
-  </div>
- </div> 
+  <div class="flex-container">
+  
+    <img class="flex-item" src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
+  
+    <img class="flex-item" src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
+
+    <img class="flex-item" src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
+ 
+    <img class="flex-item" src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
+
+    <img class="flex-item" src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="95" />
+
 	<br>
  <div>
   <div>
