--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
  
   <div class="flex-container">
   
-    <img class="flex-item" src="images/companiesLogos/Capital_One_logo.svg" style="width:100%" height="145" />
+    <img class="flex-item" src="images/companiesLogos/Capital_One_logo.svg" height="145" />
   
-    <img class="flex-item" src="images/companiesLogos/Mitsubishi_motors_logo.svg" style="width:100%" height="120" />
+    <img class="flex-item" src="images/companiesLogos/Mitsubishi_motors_logo.svg" height="120" />
 
-    <img class="flex-item" src="images/companiesLogos/Deloitte_logo.svg" style="width:100%" height="150" />
+    <img class="flex-item" src="images/companiesLogos/Deloitte_logo.svg"  height="150" />
  
-    <img class="flex-item" src="images/companiesLogos/DuPont_logo.svg" style="width:100%" height="150" />
+    <img class="flex-item" src="images/companiesLogos/DuPont_logo.svg"  height="150" />
 
-    <img class="flex-item" src="images/companiesLogos/General_Electric_logo.svg" style="width:100%" height="95" />
+    <img class="flex-item" src="images/companiesLogos/General_Electric_logo.svg"  height="95" />
 
 	<br>
  <div>
