--- a/index.html
+++ b/index.html
@@ -41,17 +41,14 @@
 	</p>
 		
 	
-	<div class="container">
-  	  <div class="center">
+	<div class="flex-container">
+  	  <div class="flex-item">
 	    <a href="/app/signup" class="button">
 	      Try for free
 	    </a>
-  	  </div>
+  	  </div> 
+       </div>  
 	
-
-	  
-	  
-
 <div class="flex-container">
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
