--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 </div>
 
 	    </div>
-</div class = "card">	
 
 
-<div class = "card">
-	<div class="container">
-	<div class = "center">
+
+<div class="flex-container">
+	<div class="flex-item">
+
 		<p align="justify">
 		Use our unique job application system to apply to easily find your next job and advance your career with the click of a button.
 		</p>
@@ -82,7 +82,7 @@
 		  LinkedIn, Glassdoor, Indeed, Monster & more!
 		</li>
 		</ul>
-	</div class = "center">
+
 	</div class="container">
 </div class = "card">
 
