--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 </div>
 
 	    </div>
+</div class = "card">
 
-
-
+<div class = "card">
 <div class="flex-container">
 	<div class="flex-item">
 
@@ -83,7 +83,7 @@
 		</li>
 		</ul>
 
-	</div class="container">
+	</div class="flex-container">
 </div class = "card">
 
 	    
