--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
 
     <img class="flex-item" src="images/companiesLogos/General_Electric_logo.svg"  height="95" />
 
-    <img class="flex-item" src="images/companiesLogos/HomeDepot_logo.svg" style="width:100%" height="145" />
+    <img class="flex-item" src="images/companiesLogos/HomeDepot_logo.svg" height="145" />
 
-    <img class="flex-item" src="images/companiesLogos/Hulu_logo.svg" style="width:100%" height="120" />
+    <img class="flex-item" src="images/companiesLogos/Hulu_logo.svg" height="120" />
 
-    <img class="flex-item" src="images/companiesLogos/UPS_logo.svg" style="width:100%" height="150" />
+    <img class="flex-item" src="images/companiesLogos/UPS_logo.svg" height="150" />
 
-    <img class="flex-item" src="images/companiesLogos/Target_Corporation_logo.svg" style="width:100%" height="150" />
+    <img class="flex-item" src="images/companiesLogos/Target_Corporation_logo.svg"  height="150" />
 
-    <img class="flex-item" src="images/companiesLogos/Whole_Foods_Market_logo.svg" style="width:100%" height="120" />
+    <img class="flex-item" src="images/companiesLogos/Whole_Foods_Market_logo.svg" height="120" />
   </div>
  </div> 	
 
