--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 	
 	
 	
-	<div class="container">
-  		<div class="center">
-		<a href="/app/signup" class="button">
-			Try for free
-		</a>
-  		</div>
-	</div>
-	<!-- </div> -->
+	<div class="flex-container">
+  	  <div class="flex-item">
+	    <a href="/app/signup" class="button">
+	      Try for free
+	    </a>
+  	  </div> 
+       </div>  
+	
 </div class = "card">	
 	    
 <div class = "card">
