--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="header">
     <div id="wrapper" style="width:100%; overflow:hidden;">
         <div id="container" style="width:100%; margin-right:auto; text-align: center">
-		<H1> QuikApply</H1>
+		<H1> QuikApply</H1> <img src = "images/QuikApply/Logos/Quickapply_Logo.svg"/>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
