--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </META>
 
 <BODY>
-  <div id="header">
+  <div id="header" class = "flex-container">
     <div id="wrapper" style="width:100%; overflow:hidden;">
-        <div id="container" style="width:100%; margin-right:auto; text-align: center">
-		<H1> QuikApply</H1> <img src = "images/QuikApply/Logos/Quickapply_Logo.svg"/>
+      
+		<H1 class "flex-item"> Quik</H1> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg"/> <H1 class = "flex-item"> Apply</H1>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
