--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="header" class = "flex-container">
     <div id="wrapper" style="width:100%; overflow:hidden;">
       
-		<H1 class "flex-item"> Quik</H1> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg"/> <H1 class = "flex-item"> Apply</H1>
+		<H1 class "flex-item" text = "Quick" width ="30%;"/> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg" width ="30%;"/> <H1 class = "flex-item" text ="Apply" width ="30%;"/>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
         </div>
