--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 </META>
 
 <BODY>
-  <div id="header" class = "flex-container">
-    <div id="wrapper" style="width:100%; overflow:hidden;">
-      
+
+      <div class="flex-container">
 		<H1 class "flex-item" text = "Quick" width ="30%;"/> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg" width ="30%;"/> <H1 class = "flex-item" text ="Apply" width ="30%;"/>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
-        </div>
-    </div>
-</div>  
+     </div>  
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
