--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <BODY>
 
       <div class="flex-container">
-		<H1 class "flex-item" text = "Quick" width ="30%;"/> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg" width ="30%;"/> <H1 class = "flex-item" text ="Apply" width ="30%;"/>
+		<H1 class "flex-item" text = "Quick"/> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg" /> <H1 class = "flex-item" text ="Apply"/>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
      </div>  
