--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <BODY>
 
       <div class="flex-container">
-		<H1 class "flex-item" text = "Quick"/> <img class "flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg" /> <H1 class = "flex-item" text ="Apply"/>
+	<div class="flex-item">
+	 <H1> text = "Quick"/>
+	  <img src = "images/QuikApply/Logos/Quickapply_Logo.svg" />
+	     <H1 text ="Apply"/>
+	  </div>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
-     </div>  
+    
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
