--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
       <div class="flex-container">
 	<div class="flex-item">
-	 <H1> text = "Quick"/>
+	 <H1> Quik</H1>
 	  <img src = "images/QuikApply/Logos/Quickapply_Logo.svg" />
-	     <H1 text ="Apply"/>
+	     <H1>Apply</H1>
 	  </div>
 		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
