--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 <BODY>
 
       <div class="flex-container">
-	<div class="flex-item">
-	 <H1> Quik</H1>
-	  <img src = "images/QuikApply/Logos/Quickapply_Logo.svg" />
-	     <H1>Apply</H1>
-	  </div>
-		<H3> Automatically Apply to Jobs on LinkedIn!<H3>
+
+	 <H1 class="flex-item"> Quik </H1>
+	  <img class="flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	     <H1 class="flex-item">Apply</H1>
+      </div>
+	 <div class="flex-container">
+		 <div class="flex-item">
+		<H3> Automatically Apply to Jobs on LinkedIn!</H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
-    
+			</div>
+			</div>
+			</div>
+			
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
