--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	     <H1 class="flex-item">Apply</H1>
       </div>
 	 <div class="flex-container">
-		 <div class="flex-item">
+		 <div class="flex-item" style = "width: 100%;">
 		<H3> Automatically Apply to Jobs on LinkedIn!</H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
 			</div>
