--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
       <div class="flex-container">
 
-	 <H1 class="flex-item"> Quik </H1>
+	 <H1 class="flex-item" style= "float: right;"> Quik </H1>
 	  <img class="flex-item" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
-	     <H1 class="flex-item">Apply</H1>
+	     <H1 class="flex-item" tyle= "float: left;">Apply</H1>
       </div>
 	 <div class="flex-container">
 		 <div class="flex-item" style = "width: 100%;">
