--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <BODY>
 
-      <div class="flex-container" style = "width: 30%;">
+      <div class="flex-container" >
 
 	 <H1 class="flex-item" style= "justify-content: right;"> Quik </H1>
 	  <img class="flex-item" style= "justify-content: center;" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
