--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
       <div class="flex-container" >
 
-	 <H1 class="flex-item" style= "justify-content: flex-end;"> Quik </H1>
-	  <img class="flex-item" style= "justify-content: center;" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
-	     <H1 class="flex-item" style= "justify-content: flex-start;">Apply</H1>
+	 <H1> Quik </H1>
+	  <img class="flex-item" style= "justify-content: center flex-basis:0;" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	     <H1>Apply</H1>
       </div>
 	 <div class="flex-container">
 		 <div class="flex-item" style = "width: 100%;">
