--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <BODY>
 
-      <div class="flex-container" >
+      <div>
 
 	 <H1 style ="flex-basis:0;"> Quik </H1>
-	  <img class="flex-item" style= "justify-content: center flex-basis:0;" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
-	     <H1 style ="flex-basis:0;">Apply</H1>
+	  <img align="middle" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	     <H1>Apply</H1>
       </div>
 	 <div class="flex-container">
-		 <div class="flex-item" style = "width: 100%;">
+		 <div class="flex-item" style = "width: 100% align: center;">
 		<H3> Automatically Apply to Jobs on LinkedIn!</H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
 			</div>
