--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
 
 	 <H1 style ="flex-basis:0;"> Quik </H1>
-	  <img align="middle" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	  <img align="middle" height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
 	     <H1>Apply</H1>
       </div>
 	 <div class="flex-container">
