--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <BODY>
 
       <div>
-
-	 <H1 style ="flex-basis:0;"> Quik </H1>
-	  <img align="middle" height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
-	     <H1>Apply</H1>
+	 <H1> Quik </H1>
+	 <img align="middle" height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	 <H1>Apply</H1>
       </div>
 	 <div class="flex-container">
 		 <div class="flex-item" style = "width: 100% align: center;">
