--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <div>
 	 <H1> Quik </H1>
-	 <img align="middle" height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	 <img class = "center height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
 	 <H1>Apply</H1>
       </div>
 	 <div class="flex-container">
