--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <BODY>
 
-      <div>
+      <div class = "center">
 	 <H1> Quik </H1>
-	 <img class = "center height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	 <img height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
 	 <H1>Apply</H1>
       </div>
 	 <div class="flex-container">
