--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <BODY>
 
-      <div class = "center">
-	 <H1> Quik </H1>
-	 <img height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
-	 <H1>Apply</H1>
+      <div>
+	 <span style ="float: right;">
+	      <H1> Quik </H1>
+		</span>
+	 <img class = "center" height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	<span style ="float: left;">
+	      <H1>Apply</H1>
+		</span>
       </div>
 	 <div class="flex-container">
 		 <div class="flex-item" style = "width: 100% align: center;">
