--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	 <span style ="float: right;">
 	      <H1> Quik </H1>
 		</span>
-	 <img class = "center" height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	 <div class = "center">
+	      <img height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	</div>
 	<span style ="float: left;">
 	      <H1>Apply</H1>
 		</span>
