--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	      <H1>Apply</H1>
 		</span>
       </div>
+	</div>
 	 <div class="flex-container">
 		 <div class="flex-item" style = "width: 100% align: center;">
 		<H3> Automatically Apply to Jobs on LinkedIn!</H3>
