--- a/index.html
+++ b/index.html
@@ -10,26 +10,21 @@
 </META>
 
 <BODY>
-
-      <div>
-	 <span style ="float: right;">
-	      <H1> Quik </H1>
-		</span>
+<div class = "header">
+      <div class = "container">
 	 <div class = "center">
-	      <img height="200" src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
-	</div>
-	<span style ="float: left;">
-	      <H1>Apply</H1>
-		</span>
-      </div>
-	</div>
+	      <img style="width:100%;"  src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+	</div class = "center">
+      <div class = "container">
+	      
+
 	 <div class="flex-container">
 		 <div class="flex-item" style = "width: 100% align: center;">
 		<H3> Automatically Apply to Jobs on LinkedIn!</H3>
                 <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
 			</div>
 			</div>
-			</div>
+</div class = "header">
 			
 
 <div class="topnav">
