--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
       <div class = "container">
 	      
 
-	 <div class="flex-container">
-		 <div class="flex-item" style = "width: 100% align: center;">
+	 <div class="flex-container" style= "width: 100%";>
 		<H3> Automatically Apply to Jobs on LinkedIn!</H3>
-                <A HREF="https://midnightsun183.github.io/WSB.github.io/"></a>
-			</div>
-			</div>
+	 </div>
+	      
 </div class = "header">
 			
 
