--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <div class = "header">
       <div class = "container">
 	 <div class = "center">
-	      <img style="width:100%;"  src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
+		 <H1>QuikApply<H1>
+	      <img style="width:100% height: 200px;"  src = "images/QuikApply/Logos/Quickapply_Logo.svg"> </img>
 	</div class = "center">
       </div class = "container">
 	      
