--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </META>
 
 <BODY>
+<div id="banner">
+    <div id="wrapper" style="width:100%; overflow:hidden;">
+        <div id="container" style="width:100%; margin-right:auto;">
+                <a href="https://midnightsun183.github.io/WSB.github.io/"><img style="width: 100%;" src="images/QuikApply/Logos/Quickapply_Logo.svg" alt="Wall Street Bets PRO!">
+        </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
+    </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
+</a></div>	
+	
 <div class = "header">
       
 	 <div class = "headerimg">
