--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <BODY>
 <div id="banner">
     <div id="wrapper" style="width:100%; height: 200px; overflow:hidden;">
-        <div id="container" style="width:100%; margin-right:auto;">
-                <a href="https://midnightsun183.github.io/WSB.github.io/"><img style="width: 100%;" src="images/QuikApply/Logos/Quickapply_Logo.svg" alt="Wall Street Bets PRO!">
+        <div id="container" style="width:100%; height: 200px margin-right:auto;">
+                <a href="https://midnightsun183.github.io/WSB.github.io/">
+			<img style="width: 100%; height: 200px" src="images/QuikApply/Logos/Quickapply_Logo.svg">
         </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
     </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
 </a></div>	
