--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div id="banner">
     <div id="wrapper" style="width:100%; height: 200px; overflow:hidden;">
         <div id="container" style="width:100%; height: 200px margin-right:auto;">
+		<H1>QuikApply</H1>
                 <a href="https://midnightsun183.github.io/WSB.github.io/">
 			<img style="width: 100%; height: 200px" src="images/QuikApply/Logos/Quickapply_Logo.svg">
         </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
