--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </META>
 
 <BODY>
+	
+<div class="headerimg">QuikApply</div>
+	<!--
 <div id="banner">
     <div id="wrapper" style="width:100%; height: 200px; overflow:hidden;">
         <div id="container" style="width:100%; height: 200px margin-right:auto;">
@@ -20,7 +23,7 @@
     </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
 </a></div>	
 	
-
+-->
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
