--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </META>
 
 <BODY>
-	
-<div class="headerimg">QuikApply</div>
+<div class = "container">
+<div class="headerimg"></div>
+</div class = "container">
 	<!--
 <div id="banner">
     <div id="wrapper" style="width:100%; height: 200px; overflow:hidden;">
