--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </META>
 
 <BODY>
-<div class = "container">
+<div class = "header">
 <div class="headerimg"></div>
-</div class = "container">
+</div class = "header">
 	<!--
 <div id="banner">
     <div id="wrapper" style="width:100%; height: 200px; overflow:hidden;">
