--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <BODY>
 <div class = "header">
-<div class="headerimg"></div>
+<div class="headerimg"><h2>QuikApply</h2></div>
 </div class = "header">
 	<!--
 <div id="banner">
