--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <BODY>
 <div class = "header">
-<div class="headerimg"><h1>QuikApply</h1></div>
+<h1>QuikApply</h1>
 </div class = "header">
 	<!--
 <div id="banner">
