--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <BODY>
 <div class = "header">
-<h1>Easy Apply</h1>
+<h1 class = "center" >Easy Apply<br> Bot</h1>
 </div class = "header">
 	<!--
 <div id="banner">
