--- a/index.html
+++ b/index.html
@@ -11,20 +11,10 @@
 
 <BODY>
 <div class = "header">
-<h1 class = "center" >Easy Apply<br> Bot</h1>
+<h1>easy Apply<br> Bot</h1>
 </div class = "header">
-	<!--
-<div id="banner">
-    <div id="wrapper" style="width:100%; height: 200px; overflow:hidden;">
-        <div id="container" style="width:100%; height: 200px margin-right:auto;">
-		<H1>QuikApply</H1>
-                <a href="https://midnightsun183.github.io/WSB.github.io/">
-			<img style="width: 100%; height: 200px;" src="images/QuikApply/Logos/Quickapply_Logo.svg">
-        </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
-    </a></div><a href="https://midnightsun183.github.io/WSB.github.io/">
-</a></div>	
-	
--->
+	<br> Easily apply to hundreds of jobs in minutes!
+
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
