--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class = "header">
 <h1>easy Apply<br> Bot</h1>
 </div class = "header">
-	<br> Easily apply to hundreds of jobs in minutes!
+	<br> <h1>Easily apply to hundreds of jobs in minutes!</h1>
 
 
 <div class="topnav">
