--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 
 <div class="topnav">
-  <a href="https://reddit.com/r/wallstreetbets">Download YoJobas Now!</a>
+  <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
   <a href="#">Resume Tips & Tricks</a>
-  <a href="#">YoJobas Pro!</a>
+  <a href="#">Easy Apply Bot Pro!</a>
 </div class="topnav">
 
 <div class = "card">
