--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <BODY>
 <div class = "header">
-<h1>easy Apply<br> Bot</h1>
+<h1>Easy Apply<br> Bot</h1>
 </div class = "header">
-	<br> <h1>Easily apply to hundreds of jobs in minutes!</h1>
+	<h2 style= "margin: auto auto auto auto;">Easily apply to hundreds of jobs in minutes!</h2>
 
 
 <div class="topnav">
