--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <BODY>
 <div class = "header">
-<h1>Easy Apply<br> Bot</h1>
+<h1>Easy Apply Bot</h1>
+	<h2>Easily apply to hundreds of jobs in minutes!</h2>
 </div class = "header">
-	<h2 style= "margin: auto auto auto auto;">Easily apply to hundreds of jobs in minutes!</h2>
+	<h2 style= "margin: auto auto;">Easily apply to hundreds of jobs in minutes!</h2>
 
 
 <div class="topnav">
