--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 <div class = "card">
 	<H3>
-		Information
+		Automate the application process on LinkedIn, Glassdoor, Indeed, & more!
 	</H3>	
 	<p align="justify">
-	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. YoJobas is here to change that. 
+	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. 
 		<br>
 		<br>
 	Instead of wading through a sea of job descriptions and then repeatedly clicking on "apply now" buttons and them mashing a never-ending series of "next" and "confirm" buttons, YoJobas is designed to work with popular job forums such as LinkedIn and Monster.com, and Glassdoor to automatically apply to jobs.
@@ -56,7 +56,25 @@
   </div>  
 </div>
 
+	
 	    </div>
+	
+	
+	
+	<p align="justify">
+	Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<sup>1</sup>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through them to find the one that matches your skills- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
+		
+		<br>
+		
+	</p>
+	
+	
+	
+	
+	
+	
+	
+	
 </div class = "card">
 <!--
 <div class = "card">
