--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<br>
 	<p align="justify">
 	U.S. News even goes as far to say:
-	</p>"<blockquote>Online application systems that barely work. While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow.
+		"<blockquote>Online application systems that barely work. While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow.
 		</blockquote>"
 	<br<br>
 	Easy Apply Bot gets around all this nonsense to apply to high quality jobs
