--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 <div class = "header">
   <br>
   <h1 class ="largeText">The Easy Apply Bot</h1>
-  <h3>Easily apply to hundreds of jobs in minutes!</h3>
+  
 </div class = "header">
+	<span>
+		<p>Easily apply to dozens of jobs in minutes!</p>
+	</span>
 	
 
 <div class="topnav">
