--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <br>
   <h1 class ="largeText">The Easy Apply Bot</h1>
   	<span>
-		<p>Easily apply to dozens of jobs in minutes!</p>
+	Easily apply to dozens of jobs in minutes!
 	</span>
 </div class = "header">
 
