--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <br>
   <h1 class ="largeText">The Easy Apply Bot</h1>
   	<span>
-		<h3>Easily apply to dozens of jobs in minutes!</h3>
+		<h3>Easily apply to dozens of jobs just in minutes!</h3>
 	</span>
 	
 </div class = "header">
