--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	</span class="flex-container">
 
 </div class = "header">
-<br>
-	
+</div class ="container">
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
