--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div class = "header">
   <div class="flex-container">
     <br>
-    <h1 class ="largeText">The Easy Apply Bot</h1>
-    <h3>Easily apply to dozens of jobs just in minutes!</h3>
+    <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
+    <h3 style = "width:100%;">Easily apply to dozens of jobs just in minutes!</h3>
   <div>
 </div class = "header">
 
