--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
        </div>  
 	
 <div class="flex-container">
-    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
-    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
-    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
-    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />  
+    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/Product_Image_1.png" />
   </div>  
 <!-- </div> -->
 
